deps/jansson/test/suites/invalid/bracket-one-comma/error.strip
1 3 3
']' expected near end of file
